Encrryption Tests and fixes

--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -62,7 +62,7 @@ else
             if (await Program.ApplyDatabaseMigrations(true))
             {
                 Completed = true;
-                InvokeAsync(StepCompleted.InvokeAsync);
+                await InvokeAsync(StepCompleted.InvokeAsync);
 
             }
             progressValue = 0;
