--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -776,7 +776,7 @@
         }
     }
 
-    void Renamed(IDirectoryModel renamedUser)
+    void Renamed(IDirectoryEntryAdapter renamedUser)
     {
         if(renamedUser is IADUser user)
         {
