--- a/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
+++ b/BLAZAM/Shared/UI/OU/MoveToOUModalContent.razor
@@ -23,7 +23,7 @@
 
 
     [Parameter]
-    public IDirectoryModel DirectoryModel { get; set; }
+    public IDirectoryEntryAdapter DirectoryModel { get; set; }
 
     IADOrganizationalUnit SelectedOU { get; set; }
     IADOrganizationalUnit StartingOU { get; set; }
