--- a/BLAZAM/Shared/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/AddPrivilegeLevelModal.razor
@@ -32,7 +32,7 @@
 </Modal>
 @code {
 
-    IDirectoryModel selectedDelegate;
+    IDirectoryEntryAdapter selectedDelegate;
     [Parameter]
     public EventCallback DelegateAdded { get; set; }
 
