--- a/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
+++ b/BLAZAM/Shared/UI/Settings/Permissions/PriviligeLevelListItem.razor
@@ -63,7 +63,7 @@
 </ListGroupItem>
 
 @code {
-    IDirectoryModel Group;
+    IDirectoryEntryAdapter Group;
     [Parameter]
     public PermissionDelegate Level { get; set; }
     [Parameter]
