--- a/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
+++ b/BLAZAM/Shared/UI/Settings/Templates/EditDirectoryTemplate.razor
@@ -263,7 +263,7 @@
     IADOrganizationalUnit SelectedOU;
 
 
-    List<IDirectoryModel> SelectedGroups = new();
+    List<IDirectoryEntryAdapter> SelectedGroups = new();
 
     async Task RefreshGroups()
     {
