--- a/BLAZAM/Shared/UI/DirectorySearchPage.razor
+++ b/BLAZAM/Shared/UI/DirectorySearchPage.razor
@@ -85,7 +85,7 @@
 
     }
 
-    protected virtual List<IDirectoryModel> results { get; set; } = new List<IDirectoryModel>();
+    protected virtual List<IDirectoryEntryAdapter> results { get; set; } = new List<IDirectoryEntryAdapter>();
     protected string BaseSearchUri = "";
 
     /// <summary>
