--- a/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
@@ -27,7 +27,8 @@
                     <SelectList
                         Data="@updateBranches"
                         TValue="string" 
-                        TItem="string" @bind-SelectedValue=@settings.UpdateBranch/>
+                        TItem="string"
+                        @bind-SelectedValue=@settings.UpdateBranch/>
                     </FieldBody>
                 </SettingsField>
 
