Fix no text in Branch select

--- a/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/UpdateSettings.razor
@@ -28,6 +28,8 @@
                         Data="@updateBranches"
                         TValue="string" 
                         TItem="string"
+                        TextField="item=>item"
+                        ValueField="item=>item"
                         @bind-SelectedValue=@settings.UpdateBranch/>
                     </FieldBody>
                 </SettingsField>
