--- a/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
+++ b/BLAZAM/Shared/UI/Settings/DirectorySettings.razor
@@ -182,6 +182,7 @@
         }
         else
         {
+            settings.ADSettingsId = 1;
             _insert = true;
         }
         LoadingData = false;
