Feature Audit filtering

--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -6,9 +6,9 @@
 <DataGrid TItem="CommonAuditLog"
           Data="@auditEntries.OrderByDescending(ae=>ae.Timestamp)"
           Responsive
+          Filterable
           Virtualize>
     <DataGridCommandColumn />
-    <DataGridColumn Field="@nameof(CommonAuditLog.Id)" Caption="#" Sortable="false" />
     <DataGridColumn Field="@nameof(CommonAuditLog.Timestamp)" Caption="Timestamp" />
     <DataGridColumn Field="@nameof(CommonAuditLog.Username)" Caption="Username" />
     <DataGridColumn Field="@nameof(CommonAuditLog.IpAddress)" Caption="IP" />
