--- a/BLAZAM/Shared/UI/Settings/SystemSettings.razor
+++ b/BLAZAM/Shared/UI/Settings/SystemSettings.razor
@@ -60,9 +60,7 @@
 
     async Task DownloadLogs()
     {
-        MemoryStream memoryStream = new MemoryStream();
-        ZipArchive zip = new ZipArchive(memoryStream);
-        zip.
+        ZipArchive zip = Loggers.GenerateZip();
     }
 
 
