--- a/BLAZAM/Pages/Configure/Audit.razor
+++ b/BLAZAM/Pages/Configure/Audit.razor
@@ -2,6 +2,9 @@
 @attribute [Authorize(Roles = UserRoles.SuperAdmin)]
 
 @inherits AppComponentBase
+
+
+<AppPageTitle>Audit</AppPageTitle>
 <h3>Audit</h3>
 <DataGrid TItem="CommonAuditLog"
           Data="@auditEntries.OrderByDescending(ae=>ae.Timestamp)"
