--- a/BLAZAM/Pages/Configure/Templates.razor
+++ b/BLAZAM/Pages/Configure/Templates.razor
@@ -1,6 +1,8 @@
 ﻿@page "/templates"
 @inherits TemplateComponent
 @attribute [Authorize(Roles=UserRoles.SuperAdmin)]
+
+<AppPageTitle>Templates</AppPageTitle>
 <h3>Templates</h3>
 <SetHeader @ref=Header>
 
