--- a/BLAZAM/Pages/Error/Oops.razor
+++ b/BLAZAM/Pages/Error/Oops.razor
@@ -8,6 +8,7 @@
     <DevTools />
 }
 
+<AppPageTitle>Oops</AppPageTitle>
 <h3>@Loc["Oops"]</h3>
 <h6>@ErrorMessage</h6>
 <p>@Loc["Please report to"] yourself</p>
