--- a/BLAZAM/Pages/OU/ViewOU.razor
+++ b/BLAZAM/Pages/OU/ViewOU.razor
@@ -1,4 +1,5 @@
 ﻿@inherits DirectoryModelComponent
+<AppPageTitle>@OU?.CanonicalName</AppPageTitle>
 
 <SetSubHeader>
     <Bar Mode="BarMode.Horizontal"
