--- a/BLAZAM/Pages/Users/ViewUser.razor
+++ b/BLAZAM/Pages/Users/ViewUser.razor
@@ -4,6 +4,8 @@
     EditMode = true;
 
 }
+
+<AppPageTitle>@User?.SamAccountName</AppPageTitle>
 <LoadingIndicator Height="Height.Is100" Visible=LoadingData>
 
     <Div Padding="Padding.Is3" Margin="Margin.Is5.OnFullHD.OnX.Is3.OnWidescreen.OnX.Is0">
