--- a/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
+++ b/BLAZAM/Shared/UI/Settings/AuthenticationSetting.razor
@@ -1,5 +1,5 @@
 ﻿@inject IDbContextFactory<DatabaseContext> DbFactory
-@inherits ValidatedForm
+@inherits SettingsComponents
 
 
 
@@ -98,6 +98,8 @@
         await InvokeAsync(StateHasChanged);
 
 
+        originalSettings = await Context.AuthenticationSettings.AsNoTracking().FirstOrDefaultAsync();
+
         settings = await Context.AuthenticationSettings.FirstOrDefaultAsync();
         _timeoutString = settings.SessionTimeout.ToString() + " Minutes";
         adminPasswordInDb = settings?.AdminPassword;
@@ -122,6 +124,7 @@
             adminPasswordInDb = settings.AdminPassword;
 
         }
+        AuditLogger.System.SettingsChanged("Authentication", settings.GetChanges(originalSettings));
         base.Save();
         await InvokeAsync(StateHasChanged);
 
